COMPILER/sample_program_project2/myCParser.java
// $ANTLR 3.5.1 myC.g 2014-05-02 10:23:51

  import java.lang.*;
  import java.io.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class myCParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BREAK", "B_L", "B_R", "CALCULATE", 
		"CHAR_TYPE", "COMMENT1", "COMMENT2", "CONTINUE", "DEFAULT", "DO", "DOUBLE_TYPE", 
		"ELSE", "ENUM", "EO1", "EO10", "EO11", "EO12", "EO2", "EO5", "EO6", "EO7", 
		"EO9", "EOF_", "EQ_OP", "EXTRA1", "EXTRA10", "EXTRA11", "EXTRA12", "EXTRA13", 
		"EXTRA8", "EXTRA9", "FLOAT_TYPE", "FOR", "Floating_point_constant", "GE2_OP", 
		"GE_OP", "GOTO", "IF_", "INT_TYPE", "Identifier", "Integer_constant", 
		"LE2_OP", "LETTER", "LE_OP", "LONG_TYPE", "MAIN", "MM_OP", "M_L", "M_R", 
		"NEWLINE_", "NE_OP", "PP_OP", "PRINTF", "RETURN", "SIGNED", "SIZEOF", 
		"STATIC", "STRUCT", "SWITCH", "S_L", "S_R", "TAB_", "TOTALEO", "TYPEDEF", 
		"UNSIGNED", "VOID_TYPE", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int BREAK=4;
	public static final int B_L=5;
	public static final int B_R=6;
	public static final int CALCULATE=7;
	public static final int CHAR_TYPE=8;
	public static final int COMMENT1=9;
	public static final int COMMENT2=10;
	public static final int CONTINUE=11;
	public static final int DEFAULT=12;
	public static final int DO=13;
	public static final int DOUBLE_TYPE=14;
	public static final int ELSE=15;
	public static final int ENUM=16;
	public static final int EO1=17;
	public static final int EO10=18;
	public static final int EO11=19;
	public static final int EO12=20;
	public static final int EO2=21;
	public static final int EO5=22;
	public static final int EO6=23;
	public static final int EO7=24;
	public static final int EO9=25;
	public static final int EOF_=26;
	public static final int EQ_OP=27;
	public static final int EXTRA1=28;
	public static final int EXTRA10=29;
	public static final int EXTRA11=30;
	public static final int EXTRA12=31;
	public static final int EXTRA13=32;
	public static final int EXTRA8=33;
	public static final int EXTRA9=34;
	public static final int FLOAT_TYPE=35;
	public static final int FOR=36;
	public static final int Floating_point_constant=37;
	public static final int GE2_OP=38;
	public static final int GE_OP=39;
	public static final int GOTO=40;
	public static final int IF_=41;
	public static final int INT_TYPE=42;
	public static final int Identifier=43;
	public static final int Integer_constant=44;
	public static final int LE2_OP=45;
	public static final int LETTER=46;
	public static final int LE_OP=47;
	public static final int LONG_TYPE=48;
	public static final int MAIN=49;
	public static final int MM_OP=50;
	public static final int M_L=51;
	public static final int M_R=52;
	public static final int NEWLINE_=53;
	public static final int NE_OP=54;
	public static final int PP_OP=55;
	public static final int PRINTF=56;
	public static final int RETURN=57;
	public static final int SIGNED=58;
	public static final int SIZEOF=59;
	public static final int STATIC=60;
	public static final int STRUCT=61;
	public static final int SWITCH=62;
	public static final int S_L=63;
	public static final int S_R=64;
	public static final int TAB_=65;
	public static final int TOTALEO=66;
	public static final int TYPEDEF=67;
	public static final int UNSIGNED=68;
	public static final int VOID_TYPE=69;
	public static final int WHILE=70;
	public static final int WS=71;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myCParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myC.g"; }


	boolean TRACEON = true;



	// $ANTLR start "program"
	// myC.g:16:1: program : MAIN S_L S_R B_L declarations statements B_R ;
	public final void program() throws RecognitionException {
		try {
			// myC.g:16:8: ( MAIN S_L S_R B_L declarations statements B_R )
			// myC.g:16:11: MAIN S_L S_R B_L declarations statements B_R
			{
			match(input,MAIN,FOLLOW_MAIN_in_program37); 
			match(input,S_L,FOLLOW_S_L_in_program39); 
			match(input,S_R,FOLLOW_S_R_in_program41); 
			match(input,B_L,FOLLOW_B_L_in_program43); 
			pushFollow(FOLLOW_declarations_in_program45);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_statements_in_program47);
			statements();
			state._fsp--;

			match(input,B_R,FOLLOW_B_R_in_program49); 
			if (TRACEON) System.out.println("MAIN () {declarations statements}");
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "declarations"
	// myC.g:19:1: declarations : ( type Identifier ';' declarations | type Identifier '=' arith_expression ';' declarations |);
	public final void declarations() throws RecognitionException {
		try {
			// myC.g:19:13: ( type Identifier ';' declarations | type Identifier '=' arith_expression ';' declarations |)
			int alt1=3;
			switch ( input.LA(1) ) {
			case INT_TYPE:
				{
				int LA1_1 = input.LA(2);
				if ( (LA1_1==EO11) ) {
					int LA1_6 = input.LA(3);
					if ( (LA1_6==Identifier) ) {
						int LA1_7 = input.LA(4);
						if ( (LA1_7==EXTRA10) ) {
							alt1=1;
						}
						else if ( (LA1_7==EXTRA8) ) {
							alt1=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 1, 7, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 1, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA1_1==Identifier) ) {
					int LA1_7 = input.LA(3);
					if ( (LA1_7==EXTRA10) ) {
						alt1=1;
					}
					else if ( (LA1_7==EXTRA8) ) {
						alt1=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 1, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FLOAT_TYPE:
				{
				int LA1_2 = input.LA(2);
				if ( (LA1_2==Identifier) ) {
					int LA1_7 = input.LA(3);
					if ( (LA1_7==EXTRA10) ) {
						alt1=1;
					}
					else if ( (LA1_7==EXTRA8) ) {
						alt1=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 1, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR_TYPE:
				{
				int LA1_3 = input.LA(2);
				if ( (LA1_3==EO11) ) {
					int LA1_8 = input.LA(3);
					if ( (LA1_8==Identifier) ) {
						int LA1_7 = input.LA(4);
						if ( (LA1_7==EXTRA10) ) {
							alt1=1;
						}
						else if ( (LA1_7==EXTRA8) ) {
							alt1=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 1, 7, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 1, 8, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA1_3==Identifier) ) {
					int LA1_7 = input.LA(3);
					if ( (LA1_7==EXTRA10) ) {
						alt1=1;
					}
					else if ( (LA1_7==EXTRA8) ) {
						alt1=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 1, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case DOUBLE_TYPE:
				{
				int LA1_4 = input.LA(2);
				if ( (LA1_4==Identifier) ) {
					int LA1_7 = input.LA(3);
					if ( (LA1_7==EXTRA10) ) {
						alt1=1;
					}
					else if ( (LA1_7==EXTRA8) ) {
						alt1=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 1, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case BREAK:
			case B_R:
			case CONTINUE:
			case ELSE:
			case FOR:
			case IF_:
			case Identifier:
			case PRINTF:
			case RETURN:
			case WHILE:
				{
				alt1=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// myC.g:19:14: type Identifier ';' declarations
					{
					pushFollow(FOLLOW_type_in_declarations65);
					type();
					state._fsp--;

					match(input,Identifier,FOLLOW_Identifier_in_declarations67); 
					match(input,EXTRA10,FOLLOW_EXTRA10_in_declarations69); 
					pushFollow(FOLLOW_declarations_in_declarations71);
					declarations();
					state._fsp--;

					 if (TRACEON) System.out.println("declarations: type Identifier : declarations"); 
					}
					break;
				case 2 :
					// myC.g:21:14: type Identifier '=' arith_expression ';' declarations
					{
					pushFollow(FOLLOW_type_in_declarations101);
					type();
					state._fsp--;

					match(input,Identifier,FOLLOW_Identifier_in_declarations103); 
					match(input,EXTRA8,FOLLOW_EXTRA8_in_declarations105); 
					pushFollow(FOLLOW_arith_expression_in_declarations107);
					arith_expression();
					state._fsp--;

					match(input,EXTRA10,FOLLOW_EXTRA10_in_declarations109); 
					pushFollow(FOLLOW_declarations_in_declarations111);
					declarations();
					state._fsp--;

					}
					break;
				case 3 :
					// myC.g:25:14: 
					{
					 if (TRACEON) System.out.println("declarations: ");
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "type"
	// myC.g:27:1: type : ( INT_TYPE | FLOAT_TYPE | CHAR_TYPE | DOUBLE_TYPE | INT_TYPE '*' | CHAR_TYPE '*' );
	public final void type() throws RecognitionException {
		try {
			// myC.g:27:5: ( INT_TYPE | FLOAT_TYPE | CHAR_TYPE | DOUBLE_TYPE | INT_TYPE '*' | CHAR_TYPE '*' )
			int alt2=6;
			switch ( input.LA(1) ) {
			case INT_TYPE:
				{
				int LA2_1 = input.LA(2);
				if ( (LA2_1==EO11) ) {
					alt2=5;
				}
				else if ( (LA2_1==Identifier) ) {
					alt2=1;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FLOAT_TYPE:
				{
				alt2=2;
				}
				break;
			case CHAR_TYPE:
				{
				int LA2_3 = input.LA(2);
				if ( (LA2_3==EO11) ) {
					alt2=6;
				}
				else if ( (LA2_3==Identifier) ) {
					alt2=3;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case DOUBLE_TYPE:
				{
				alt2=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// myC.g:27:7: INT_TYPE
					{
					match(input,INT_TYPE,FOLLOW_INT_TYPE_in_type165); 
					 if (TRACEON) System.out.println("type: INT");
					}
					break;
				case 2 :
					// myC.g:28:6: FLOAT_TYPE
					{
					match(input,FLOAT_TYPE,FOLLOW_FLOAT_TYPE_in_type174); 
					if (TRACEON) System.out.println("type: FLOAT");
					}
					break;
				case 3 :
					// myC.g:29:6: CHAR_TYPE
					{
					match(input,CHAR_TYPE,FOLLOW_CHAR_TYPE_in_type183); 
					if (TRACEON) System.out.println("type:CHAR");
					}
					break;
				case 4 :
					// myC.g:30:6: DOUBLE_TYPE
					{
					match(input,DOUBLE_TYPE,FOLLOW_DOUBLE_TYPE_in_type191); 
					if (TRACEON) System.out.println("type:DOUBLE");
					}
					break;
				case 5 :
					// myC.g:31:6: INT_TYPE '*'
					{
					match(input,INT_TYPE,FOLLOW_INT_TYPE_in_type199); 
					match(input,EO11,FOLLOW_EO11_in_type201); 
					if (TRACEON) System.out.println("type:Pointer to int");
					}
					break;
				case 6 :
					// myC.g:32:6: CHAR_TYPE '*'
					{
					match(input,CHAR_TYPE,FOLLOW_CHAR_TYPE_in_type209); 
					match(input,EO11,FOLLOW_EO11_in_type211); 
					if (TRACEON) System.out.println("type:Pointer to char");
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "type"



	// $ANTLR start "statements"
	// myC.g:33:1: statements : ( statement statements |);
	public final void statements() throws RecognitionException {
		try {
			// myC.g:33:11: ( statement statements |)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==BREAK||LA3_0==CONTINUE||LA3_0==ELSE||LA3_0==FOR||LA3_0==IF_||LA3_0==Identifier||(LA3_0 >= PRINTF && LA3_0 <= RETURN)||LA3_0==WHILE) ) {
				alt3=1;
			}
			else if ( (LA3_0==B_R||LA3_0==S_R) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// myC.g:33:12: statement statements
					{
					pushFollow(FOLLOW_statement_in_statements217);
					statement();
					state._fsp--;

					pushFollow(FOLLOW_statements_in_statements219);
					statements();
					state._fsp--;

					}
					break;
				case 2 :
					// myC.g:34:10: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statements"



	// $ANTLR start "statement"
	// myC.g:36:1: statement : ( Identifier EXTRA8 arith_expression ';' | Identifier TOTALEO Identifier ';' | Identifier TOTALEO Integer_constant ';' | Identifier TOTALEO Identifier | Identifier TOTALEO Integer_constant | Identifier TOTALEO | Identifier TOTALEO ';' | Identifier EXTRA8 Identifier CALCULATE Identifier ';' | Identifier CALCULATE Identifier TOTALEO Integer_constant | BREAK ';' | CONTINUE ';' | FOR S_L statements S_R B_L declarations statements B_R | WHILE S_L statements S_R B_L declarations statements B_R | PRINTF S_L EXTRA13 primary_expression EXTRA13 S_R ';' | IF_ S_L statements S_R B_L declarations statements B_R | ELSE IF_ S_L statements S_R B_L declarations statements B_R | ELSE B_L declarations statements B_R | RETURN Integer_constant ';' );
	public final void statement() throws RecognitionException {
		try {
			// myC.g:36:10: ( Identifier EXTRA8 arith_expression ';' | Identifier TOTALEO Identifier ';' | Identifier TOTALEO Integer_constant ';' | Identifier TOTALEO Identifier | Identifier TOTALEO Integer_constant | Identifier TOTALEO | Identifier TOTALEO ';' | Identifier EXTRA8 Identifier CALCULATE Identifier ';' | Identifier CALCULATE Identifier TOTALEO Integer_constant | BREAK ';' | CONTINUE ';' | FOR S_L statements S_R B_L declarations statements B_R | WHILE S_L statements S_R B_L declarations statements B_R | PRINTF S_L EXTRA13 primary_expression EXTRA13 S_R ';' | IF_ S_L statements S_R B_L declarations statements B_R | ELSE IF_ S_L statements S_R B_L declarations statements B_R | ELSE B_L declarations statements B_R | RETURN Integer_constant ';' )
			int alt4=18;
			switch ( input.LA(1) ) {
			case Identifier:
				{
				switch ( input.LA(2) ) {
				case EXTRA8:
					{
					int LA4_10 = input.LA(3);
					if ( (LA4_10==Identifier) ) {
						int LA4_15 = input.LA(4);
						if ( (LA4_15==CALCULATE) ) {
							alt4=8;
						}
						else if ( ((LA4_15 >= EO10 && LA4_15 <= EO12)||LA4_15==EO9||LA4_15==EXTRA10||LA4_15==Floating_point_constant||(LA4_15 >= Identifier && LA4_15 <= Integer_constant)) ) {
							alt4=1;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 4, 15, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}
					else if ( (LA4_10==EO10||LA4_10==EO9||LA4_10==Floating_point_constant||LA4_10==Integer_constant) ) {
						alt4=1;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 10, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

					}
					break;
				case TOTALEO:
					{
					switch ( input.LA(3) ) {
					case Identifier:
						{
						switch ( input.LA(4) ) {
						case EXTRA10:
							{
							alt4=2;
							}
							break;
						case CALCULATE:
						case EXTRA8:
						case TOTALEO:
							{
							alt4=6;
							}
							break;
						case BREAK:
						case B_R:
						case CONTINUE:
						case ELSE:
						case FOR:
						case IF_:
						case Identifier:
						case PRINTF:
						case RETURN:
						case S_R:
						case WHILE:
							{
							alt4=4;
							}
							break;
						default:
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 4, 17, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}
						}
						break;
					case Integer_constant:
						{
						int LA4_18 = input.LA(4);
						if ( (LA4_18==EXTRA10) ) {
							alt4=3;
						}
						else if ( (LA4_18==BREAK||LA4_18==B_R||LA4_18==CONTINUE||LA4_18==ELSE||LA4_18==FOR||LA4_18==IF_||LA4_18==Identifier||(LA4_18 >= PRINTF && LA4_18 <= RETURN)||LA4_18==S_R||LA4_18==WHILE) ) {
							alt4=5;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 4, 18, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

						}
						break;
					case EXTRA10:
						{
						alt4=7;
						}
						break;
					case BREAK:
					case B_R:
					case CONTINUE:
					case ELSE:
					case FOR:
					case IF_:
					case PRINTF:
					case RETURN:
					case S_R:
					case WHILE:
						{
						alt4=6;
						}
						break;
					default:
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 11, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}
					}
					break;
				case CALCULATE:
					{
					alt4=9;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
				}
				break;
			case BREAK:
				{
				alt4=10;
				}
				break;
			case CONTINUE:
				{
				alt4=11;
				}
				break;
			case FOR:
				{
				alt4=12;
				}
				break;
			case WHILE:
				{
				alt4=13;
				}
				break;
			case PRINTF:
				{
				alt4=14;
				}
				break;
			case IF_:
				{
				alt4=15;
				}
				break;
			case ELSE:
				{
				int LA4_8 = input.LA(2);
				if ( (LA4_8==IF_) ) {
					alt4=16;
				}
				else if ( (LA4_8==B_L) ) {
					alt4=17;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 8, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case RETURN:
				{
				alt4=18;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// myC.g:36:11: Identifier EXTRA8 arith_expression ';'
					{
					match(input,Identifier,FOLLOW_Identifier_in_statement237); 
					match(input,EXTRA8,FOLLOW_EXTRA8_in_statement239); 
					pushFollow(FOLLOW_arith_expression_in_statement241);
					arith_expression();
					state._fsp--;
